[project]
name = "volsurface"
version = "0.1.0"
description = "Volatility smile fitting with SABR and Gaussian Processes"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["volsurface*"]
